--- a/mbed_app.json
+++ b/mbed_app.json
@@ -38,7 +38,11 @@
             "sotp-section-1-size"              : "(16*1024)",
             "sotp-section-2-address"           : "(0x08000000+48*1024)",
             "sotp-section-2-size"              : "(16*1024)",
-            "update-client.application-details": "(0x08000000+64*1024)"
+            "update-client.application-details": "(0x08000000+64*1024)",
+            "SPI_MOSI": "PA_7",
+            "SPI_MISO": "PA_6",
+            "SPI_CLK":  "PA_5",
+            "SPI_CS":   "PD_14"
         },
         "UBLOX_EVK_ODIN_W2": {
             "target.device_has_remove": ["EMAC"],
